kustomize_fastapi/pgadmin/pg-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-phpmyadmin-service
  namespace: kustomize
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
